[package]
name = "runstats"
version = "0.1.0"
authors = ["Konstantin Zhukov <moncruist@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
chrono = "0.4"

[dev-dependencies]
test-case = "1.0.0"